      it.
    + [NT] Use Lintian::Collect to find ELF files.
    + [NT] Replace all usage of objdump with readelf.
      (Closes: #614034)

  * frontend/lintian:
    + [JW] Fix typo in error message.

  * lib/Lintian/Architecture.pm:
    + [NT] Lazily evaluate the data file.
  * lib/Lintian/Data.pm:
    + [NT] Lazily load data files.
  * lib/Lintian/Profile.pm:
    + [NT] Normalize profile name and replace "parents" with
      "profile_list".  The latter also includes the current profile
      name.
  * lib/Util.pm:
    + [JW] Consider duplicate fields a syntax error in dctrl files.
      Previously, duplicate fields were silently ignored (except
      when a separate tag would check for it).  (Closes: #664061)

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100

lintian (2.5.6) unstable; urgency=low

  * checks/*:
    + [NT] Simplified some bit operations done on file permissions.
  * checks/binaries:
    + [NT] Fix false-negative missing-dependency-on-phpapi when the
      binary included a "SOVERSION" in its name.  Thanks to Ondřej
      Surý for the report.  (Closes: #662936)
  * checks/changelog-file:
    + [NT] Do not emit "no-upstream-changelog" for transitional
      packages.  Thanks to Paul Wise for the report.
      (Closes: #660076)
  * checks/cruft:
    + [NT] Added missing "unless" in the code.  Fixes false
      positive "source-contains-waf-binary".  Thanks to
      Dmitrijs Ledkovs for the report.  (Closes: #661561)
  * checks/debhelper:
    + [NT] Fix FP executable-debhelper-file-without-being-executable
      emitted for directories.  Thanks to Felix Geyer for the report
      and the patch.  (Closes: #663447)
  * checks/files.desc:
    + [NT] Fix a typo in a tag description.  Thanks to Ludovic
      Rousseau for spotting it.  (Closes: #663759)
  * checks/scripts:
    + [NT] Allow fontforge-nox as (alternative) provider for the
      fontforge interpreter.  Thanks to Martin Erik Werner for
      the report.  (Closes: #661363)